added styles to header

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -2,6 +2,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 body {
@@ -18,11 +19,18 @@ body {
     font-optical-sizing: auto;
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+ 
+
 main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     overflow-x: hidden;
+    overflow-y: scroll;
+    max-height: 100dvh;
 }
 
 button {
