--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -3,17 +3,72 @@
     display: flex;
     position: relative;
     align-items: center;
+    min-height: calc(100dvh - 3rem);
 }
 
 .header-item {
     position: absolute;
-    background-color: red;
+    height: 100%;
+    width: 100dvw;
+    display: flex;
+    align-items: center;
 }
 
+.header-item > img {
+    width: 100%;
+    height: 100%;
+}
+
+
+.header-item:nth-of-type(1){
+    right: 100%;
+}
+.header-item:nth-of-type(3){
+    left: 100%;
+}
 .router-buttons {
-    position: absolute;
-    left: 1rem;
+    position: fixed;
+    padding: 0;
+    width: 5rem;
+    height: 5rem;
+    font-size: 1.5rem;
+    left: 1.5rem;
+    border-radius: 50%;
+    color: rgba(66, 65, 65, 0.5);
+    background-color: rgba(128, 128, 128, 0.164);
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .router-buttons:last-of-type {
-    right: 1rem;
+    left: auto;
+    right: 1.5rem;
 }
+
+
+/**/
+
+.header-content {
+    padding-left: 3rem;
+    position: absolute;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.header-title {
+    font-size: 1.2rem;
+    margin-bottom: .7rem;
+}
+.header-description {
+    color: gray;
+    font-size: 1rem;
+    margin-bottom: .55rem;
+    margin-left: .1rem;
+}
+.header-price {
+    font-weight: bold;
+    margin-left: .1rem;
+    font-size: 1.1rem;
+}  
