--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -27,14 +27,14 @@
     left: 100%;
 }
 .router-buttons {
-    position: fixed;
+    position: absolute;
     padding: 0;
     width: 5rem;
     height: 5rem;
     font-size: 1.5rem;
     left: 1.5rem;
     border-radius: 50%;
-    color: rgba(66, 65, 65, 0.5);
+    color: rgba(24, 24, 24, 0.295);
     background-color: rgba(128, 128, 128, 0.164);
     z-index: 2;
     display: flex;
@@ -50,25 +50,29 @@
 /**/
 
 .header-content {
-    padding-left: 3rem;
+    padding-left: 8rem;
     position: absolute;
-    width: 40%;
+    width: 50%;
     display: flex;
     flex-direction: column;
+    height: 60%;
 }
 
 .header-title {
-    font-size: 1.2rem;
-    margin-bottom: .7rem;
+    font-size: 2rem;
+    margin-bottom: .75rem;
+    letter-spacing: 2px;
 }
 .header-description {
     color: gray;
-    font-size: 1rem;
-    margin-bottom: .55rem;
+    font-size: 1.1rem;
+    margin-bottom: auto;
     margin-left: .1rem;
+    width: 60%;
 }
 .header-price {
     font-weight: bold;
-    margin-left: .1rem;
-    font-size: 1.1rem;
+    margin-left: .2rem;
+    margin-bottom: .7rem;
+    font-size: 1.6rem;
 }  
