--- a/src/assets/_product.css
+++ b/src/assets/_product.css
@@ -3,6 +3,19 @@
     height: 100%;
     border-radius: 15px;
 }
+.--horizontal {
+    display: flex;
+    flex-direction: row;
+    gap: .5rem;
+}
+.--horizontal > img {
+    min-width: 40%;
+    width: 40%;
+}
+.--horizontal > .action-zone {
+    width: 100%;
+    max-width: calc(60% - 2rem);
+}
 
 .action-zone {
     display: flex;
