--- a/src/assets/newArrival.css
+++ b/src/assets/newArrival.css
@@ -1,3 +1,7 @@
+.--new_arrival_block >h3 {
+    margin-bottom: 3rem;
+}
+
 .new_arrival_grid {
     display: grid;
     grid-template-columns: repeat(3, 29%);
@@ -5,4 +9,9 @@
     justify-content: center;
     gap: 1.5rem 2%;
     width: 100%;
+}
+
+.new_arrival_grid .action_zone--content>p:first-child {
+    font-size: .7rem;
+    font-weight: bold;
 }
