--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -1,5 +1,5 @@
 .header-carrousel {
-    margin: 3rem 0;
+    padding: 3rem 0 0;
     display: flex;
     position: relative;
     align-items: center;
