--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -93,4 +93,9 @@ select {
     width: fit-content;
     margin: 0;
     border-radius: 8px;
+    border: 3px solid var(--cmain);
+}
+.btn:hover {
+    color: var(--cmain);
+    background-color: white;
 }
