--- a/src/assets/categories.css
+++ b/src/assets/categories.css
@@ -9,16 +9,20 @@
     position: relative;
     width: 23%;
     height: calc(23dvw * 1.1);
-    overflow: hidden;
 }
 .categories_block > img {
+    border-radius: 15px;    
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    filter: grayscale(1);
 }
 
 .categories_block > h3 {
     position: absolute;
-    top: 1rem;
-    left: 1rem;
+    text-align: center;
+    width: 100%;
+    left: 0;
+    top: -2.5rem;
     color: black;
 }
