--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -6,6 +6,12 @@
     min-height: calc(100dvh - 3rem);
 }
 
+.header_gradient {
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(270deg, transparent 40%, white 60%);
+}
+
 .header-item {
     position: absolute;
     height: 100%;
@@ -17,6 +23,8 @@
 .header-item > img {
     width: 100%;
     height: 100%;
+    object-position: right;
+    object-fit: contain;
 }
 
 
