--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -44,7 +44,7 @@
     border-radius: 50%;
     color: rgba(24, 24, 24, 0.295);
     background-color: rgba(128, 128, 128, 0.164);
-    z-index: 2;
+    z-index: 3;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,3 +84,24 @@
     margin-bottom: .7rem;
     font-size: 1.6rem;
 }  
+
+
+/***/
+
+.rotate-toLeft .header-item:nth-of-type(1) {
+    z-index: 2;
+    right: 0%;
+    transition: right 300ms;
+}
+.rotate-toRight .header-item:nth-of-type(3) {
+    z-index: 2;
+    left: 0%;
+    transition: left 300ms;
+}
+
+.rotate-toRight .header-item:nth-of-type(2),
+.rotate-toLeft .header-item:nth-of-type(2) {
+    opacity: 0;
+    scale: 0.8;
+    transition: all 300ms;
+}
